--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ footer{
 }
 #baner{
     width: 100%;
-    height: auto;
+    height: 10%;
     border:cadetblue dotted;
     position:relative;
     max-width: 100%;
